syntax = "proto3";
option go_package = ".;api";

message FloatPoint {
    float x = 1;
    float y = 2;
    float z = 3;
}

message WorldPoint {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}

enum BlockType {
    Debug = 0;
    Air = 1;
    Root = 2;
}

