syntax = "proto3";
option go_package = ".;api";
import "app.proto";

message Player {
    string id = 1;
    FloatPoint pos = 2;
}

message PlayerConnected {
    Player player = 1;

}
message PlayerDisconnected {
    string id = 1;
}

message EntityUpdates {
    repeated Player players = 2;
}

message BlockUpdates {
    repeated Blocks blocks = 1;
}

message Blocks {
    repeated WorldPoint point = 1;
    BlockType blockType = 2;
}

message NetUpdate {
    BlockUpdates blocks = 1;
    EntityUpdates entities = 2;
    uint64 tick = 3;
}
